@@ -1,53 +1,74 @@
 package com.sprint.mission.discodeit.basic;
 
-import com.sprint.mission.discodeit.dto.request.BinaryContentCreateRequest;
+import com.sprint.mission.discodeit.dto.BinaryContentDto;
 import com.sprint.mission.discodeit.entity.BinaryContent;
+import com.sprint.mission.discodeit.exception.ResourceNotFoundException;
+import com.sprint.mission.discodeit.mapper.BinaryContentMapper;
 import com.sprint.mission.discodeit.repository.BinaryContentRepository;
 import com.sprint.mission.discodeit.service.BinaryContentService;
+import com.sprint.mission.discodeit.storage.BinaryContentStorage;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.NoSuchElementException;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
+@Slf4j
 @RequiredArgsConstructor
 @Service
+@Transactional(readOnly = true)
 public class BasicBinaryContentService implements BinaryContentService {
 
     private final BinaryContentRepository binaryContentRepository;
+    private final BinaryContentStorage binaryContentStorage;
+    private final BinaryContentMapper binaryContentMapper;
 
+    @Transactional
     @Override
-    public BinaryContent create(BinaryContentCreateRequest request) {
-        String fileName = request.fileName();
-        byte[] bytes = request.bytes();
-        String contentType = request.contentType();
-        BinaryContent binaryContent = new BinaryContent(
-                fileName,
-                (long) bytes.length,
-                contentType,
-                bytes
-        );
-        return binaryContentRepository.save(binaryContent);
+    public BinaryContentDto create(String fileName, Long size, String contentType, byte[] data) {
+        UUID id = UUID.randomUUID();
+
+        try {
+            binaryContentStorage.put(id, data);
+            
+            BinaryContent binaryContent = BinaryContent.builder()
+                    .fileName(fileName)
+                    .size(size)
+                    .contentType(contentType)
+                    .build();
+            
+            BinaryContent savedContent = binaryContentRepository.save(binaryContent);
+            log.info("바이너리 콘텐츠 저장 완료: {}", savedContent.getId());
+            return binaryContentMapper.toDto(savedContent);
+        } catch (Exception e) {
+            log.error("파일 저장 실패: {}", e.getMessage());
+            throw new RuntimeException("파일 저장 중 오류가 발생했습니다: " + e.getMessage(), e);
+        }
     }
 
     @Override
-    public BinaryContent find(UUID binaryContentId) {
-        return binaryContentRepository.findById(binaryContentId)
-                .orElseThrow(() -> new NoSuchElementException(
-                        "BinaryContent with id " + binaryContentId + " not found"));
+    public BinaryContentDto find(UUID binaryContentId) {
+        BinaryContent binaryContent = binaryContentRepository.findById(binaryContentId)
+                .orElseThrow(() -> new ResourceNotFoundException(
+                        "바이너리 콘텐츠", "id", binaryContentId));
+        return binaryContentMapper.toDto(binaryContent);
     }
 
     @Override
-    public List<BinaryContent> findAllByIdIn(List<UUID> binaryContentIds) {
+    public List<BinaryContentDto> findAllByIdIn(List<UUID> binaryContentIds) {
         return binaryContentRepository.findAllByIdIn(binaryContentIds).stream()
-                .toList();
+                .map(binaryContentMapper::toDto)
+                .collect(Collectors.toList());
     }
 
+    @Transactional
     @Override
     public void delete(UUID binaryContentId) {
         if (!binaryContentRepository.existsById(binaryContentId)) {
-            throw new NoSuchElementException("BinaryContent with id " + binaryContentId + " not found");
+            throw new ResourceNotFoundException("바이너리 콘텐츠", "id", binaryContentId);
         }
         binaryContentRepository.deleteById(binaryContentId);
     }
